# 4inteligence

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.sh  docker-compose-test.yml  docker-compose.yml  requirements.txt  setup.py
app/: entrypoint.sh
app/alembic/: env.py
app/api/: config.py  deps.py  main.py
app/api/routers/: address.py  users.py
app/api/security/: auth.py
app/backend/: .gitignore  backend.dockerfile  pyproject.toml
app/backend/alembic/: env.py
app/backend/api/: deps.py  main.py
app/backend/api/routers/: address.py  auth.py  users.py
app/backend/core/: config.py
app/backend/core/controllers/: address.py  auth.py  base.py  users.py
app/backend/data/: database.py  models.py
app/backend/data/schema/: address.py  auth.py
app/backend/scripts/: entrypoint.sh
app/backend/tests/: conftest.py  test_users_b.py
app/controllers/: address.py  auth.py  base_controller.py  users.py
app/data/: database.py  models.py
app/data/schema/: address.py  auth.py  users.py
app/data/schema/helpers/: validators.py
app/tests/: conftest.py  test_users_b.py
